# jsteer

./: .gitignore  .gitmodules  AGENTS.md  README.md  config.py  pyproject.toml
.agents/skills/marimo-pair/: SKILL.md
.agents/skills/marimo-pair/reference/: execution-context.md  finding-marimo.md
.agents/skills/retro-marimo-pair/: SKILL.md
.agents/skills/retro-marimo-pair/reference/: code-mode-surface.md
.claude/skills/: marimo-pair  retro-marimo-pair
artifacts/: eval_mechanisms.txt  measure_all.jsonl  steering_demo_results.json  u4_step2_vjp_parity.txt
docs/: overnight_mechanisms.md  research_journal.md
docs/evidence/: parity_u1.txt
docs/reviews/: code.md  code_demo.md  comment_review.md  comment_review_prompt.md  oracle_steering.md
jsteer/: __init__.py  applies.py  demo.py  jacobian.py  vjp.py
nbs/: persona_steering.ipynb  persona_steering_v2.ipynb  persona_steering_v3.ipynb  steering_demo.py  word_steering.ipynb
notebooks/: persona_steering.ipynb  word_steering.ipynb
scripts/: fit.py  fit_qwen06b.py  parity_u1.py  smoke.py  u4_step3_fit4b.py  u4_step3_guard.sh
scripts/scratch/: analyze_mechanisms.py  build_persona_v2.py  calib_c_prefitted.py  calib_delivery.py  calib_persona.py  calib_pos_C.py  demo_edges.py  eval_mechanisms.py  measure_all.py  parity_u1.py  plot_demo_sweep.py  proto_lens_slice.py  rep_metric_check.py  run_nb.py  run_steering_demo.py  smoke_sweep.py  sweep_artifact.py  u4_step1_ref524.py  u4_step2_vjp.py  u4_step3_fit4b.py  u4_step3_guard.sh  u4_step3_retry.sh  uat_coherence_break.py  uat_prefitted_4b.py  uat_promoted_cowsay.py  uat_rubric.py  validate_traces.py
